# basic-sfml-project

./: .gitignore  CMakeLists.txt  Makefile
src/: main.cpp
